data/derived/comb/progs/unify/prog6366.ml.out
Characters 22-25:
  let _ = sepConcat "" ["a";"b";"c";"d";"e"];;
                        ^^^
Error: This expression has type string but an expression was expected of type
         string list
